[gd_scene load_steps=17 format=2]

[ext_resource path="res://actors/judge_pajamas/Pivot.tscn" type="PackedScene" id=1]
[ext_resource path="res://actor_framework/Actor.tscn" type="PackedScene" id=2]
[ext_resource path="res://actor_framework/player/CameraTargetPosition.gd" type="Script" id=4]
[ext_resource path="res://actor_framework/player/PlayerActor.gd" type="Script" id=5]
[ext_resource path="res://actor_states/motion/Die.tscn" type="PackedScene" id=6]
[ext_resource path="res://actor_states/JobState.tscn" type="PackedScene" id=7]
[ext_resource path="res://actor_states/motion/Stagger.tscn" type="PackedScene" id=10]
[ext_resource path="res://interface/target_reticle/TargetReticleHUD.tscn" type="PackedScene" id=11]
[ext_resource path="res://interface/BattleHUD/BattleHUD.tscn" type="PackedScene" id=12]
[ext_resource path="res://actor_states/motion/Air.tscn" type="PackedScene" id=14]
[ext_resource path="res://actor_framework/player/states/Idle.tscn" type="PackedScene" id=20]
[ext_resource path="res://actor_framework/player/states/Cutscene.tscn" type="PackedScene" id=21]
[ext_resource path="res://actor_framework/stats/growth_stats/DefaultGrowthStats.tres" type="Resource" id=22]
[ext_resource path="res://actor_framework/stats/DefaultStats.tres" type="Resource" id=23]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 41.9573, 87.6501 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.5314, 56.3854 )

[node name="JudgePajamas" groups=[
"players",
] instance=ExtResource( 2 )]
collision_mask = 97
script = ExtResource( 5 )

[node name="Pivot" parent="." index="0" instance=ExtResource( 1 )]

[node name="StateMachine" parent="." index="1"]
pause_offscreen = false

[node name="Idle" parent="StateMachine" index="0" instance=ExtResource( 20 )]
run_animation = "walk"

[node name="MotionSteering" parent="StateMachine/Idle/Motion" index="1"]
max_speed = 300.0

[node name="Gravity" parent="StateMachine/Idle/Motion" index="2"]
gravity = 3800.0

[node name="Stagger" parent="StateMachine" index="1" instance=ExtResource( 10 )]

[node name="Air" parent="StateMachine" index="2" instance=ExtResource( 14 )]

[node name="Die" parent="StateMachine" index="3" instance=ExtResource( 6 )]

[node name="Job" parent="StateMachine" index="4" instance=ExtResource( 7 )]

[node name="Cutscene" parent="StateMachine" index="5" instance=ExtResource( 21 )]

[node name="CollisionBox" parent="." index="2"]
position = Vector2( 0, 23.7504 )
shape = SubResource( 1 )

[node name="Stats" parent="." index="5"]
growth_stats = ExtResource( 22 )
character_stats = ExtResource( 23 )

[node name="CameraTargetPosition" type="Node2D" parent="." index="9"]
position = Vector2( 125, 0 )
script = ExtResource( 4 )

[node name="PlayerHUDLayer" type="CanvasLayer" parent="." index="10"]
layer = 100

[node name="BattleHUD" parent="PlayerHUDLayer" index="0" instance=ExtResource( 12 )]
visible = false

[node name="PlayerIcon" parent="PlayerHUDLayer/BattleHUD" index="2"]
visible = false

[node name="TargetReticleHUD" parent="PlayerHUDLayer" index="1" instance=ExtResource( 11 )]
visible = false

[node name="DropThroughArea" type="Area2D" parent="." index="12"]
position = Vector2( 0, 110.873 )
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropThroughArea" index="0"]
position = Vector2( 0, -139.673 )
shape = SubResource( 2 )
[connection signal="body_exited" from="DropThroughArea" to="." method="_on_DropThroughArea_body_exited"]

[editable path="StateMachine/Idle"]

[editable path="StateMachine/Idle/Motion"]

[editable path="StateMachine/Air"]

[editable path="PlayerHUDLayer/BattleHUD"]
